--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@
   padding-left: 800px;
   text-decoration: none;
 }
-.txt-tomorrowland{
+.txt-harmony{
   padding-left: 4px;
-  color: rgb(241, 186, 114);
+  color: rgb(19, 17, 16);
   padding-top: 5px;
 }
 .ul-list{
@@ -55,7 +55,6 @@
   border: solid rgba(231, 122, 122, 0.911) 6px;
   width: 200px;
   border-radius: 9px;
-  0
  
 }
 .card-list-one {
